# genja

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  environment.yml  main.py  pyproject.toml
.github/: FUNDING.yml
content/: example.md  fruit_prices.md  notes1.md  tractors.md
docs/: .readthedocs.yaml  conf.py  contributing.md  contributing.rst  example.rst  examples.md  examples.rst  getstarted.md  getstarted.rst  index.md  index.rst  markdown.md  markdown.rst  templates.md  templates.rst
example/: config.json
example/_mdcontent/: about.md
example/_mdcontent/veggies/: turnips.md
example/_templates/: index.html
example/mdcontent/: about.md  contact.md  notes2.md  notes3.md  notes4.md  notes5.md  notes6.md  template.html
example/mdcontent/cars/: first-car.md  washing.md
example/mdcontent/todo/: notes5.md  notes6.md
example/mdcontent/trucks/: appliances.md  tires.md
example/mdcontent/veggies/: broccoli.md  carrots.md
example/templates/: base.html  feed.json  index.html  page.html  template.html
example/website/: about.html  contact.html  feed.json  index.html  notes1.html  notes2.html  notes4.html  styles.css  template.html
example/website/cars/: first-car.html  washing.html
example/website/drafts/: notes5.html  notes6.html
example/website/fruits/: apple.html  crab-apple.html  orange.html  watermelon.html
example/website/todo/: notes5.html  notes6.html
example/website/trucks/: appliances.html  tires.html
example/website/veggies/: broccoli.html  carrots.html  turnips.html
examples/code-blocks/_pages/: about.md
examples/code-blocks/_posts/: apple.md
examples/code-blocks/_templates/: page.html  post.html
examples/directory-nocat/: config.toml
examples/directory-nocat/templates/: feed.json  index.html
examples/directory-output/: config.toml  genja.toml
examples/directory-output/_pages/: about.md
examples/directory-output/_posts/: apple.md  orange.md
examples/directory-output/_templates/: post.html
examples/directory-output/pages/: about.md
examples/directory-output/posts/: apple.md  orange.md
examples/directory-output/templates/: index.html  post.html
examples/directory-website/: config.toml
examples/directory-website/website/: styles.css
examples/directory-withcat/_pages/: contact.md
examples/directory-withcat/templates/: page.html
examples/html-content/_pages/: about.md
examples/html-content/_posts/: apple.md
examples/html-content/_templates/: index.html
examples/image-files/: genja.toml  styles.css
examples/image-files/_pages/: contact.md
examples/image-files/_posts/: apple.md
examples/toplevel-nopages/: config.toml
examples/toplevel-output/: config.toml  styles.css
examples/toplevel-tags/: genja.toml  styles.css
examples/website-toplevel/: config.json  index.html
htmlcontent/: notes1.html  notes2.html  notes3.html  template.html
mdcontent/: notes1.md
src/genger/: main.py
src/genja/: __init__.py  build_feed.py  build_index.py  build_pages.py  builder.py  builders.py  main.py  server.py
staticgen/: __main__.py  parse_markdown.py
tests/: conftest.py  test_build_feed.py  test_build_pages.py  test_build_posts.py  test_build_templates.py  test_builder.py  test_command_line.py  test_inputs.py  test_version.py
website/: index.html  notes3.html
(+40 files in other folders)
