[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genja"
version = "24.10"
authors = [{name = "Gavin Wiggins"}]
description = "Static site generator for GitHub Pages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["markdown", "jinja2", "beautifulsoup4", "livereload"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
docs = ["furo", "sphinx"]
dev = ["furo", "pytest", "ruff", "sphinx"]

[project.urls]
"Homepage" = "https://github.com/wigging/genja"

[project.scripts]
genja = "genja.main:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["E501", "D"]
ignore = ["D200", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
