[project]
name = "genja"
version = "25.2"
authors = [{name = "Gavin Wiggins"}]
description = "Static site generator for GitHub Pages"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "beautifulsoup4>=4.13.3",
    "jinja2>=3.1.5",
    "livereload>=2.7.1",
    "markdown>=3.7",
]

[project.scripts]
genja = "genja.main:main"

[project.urls]
"Documentation" = "https://genja.readthedocs.io"
"GitHub" = "https://github.com/wigging/genja"

[project.optional-dependencies]
docs = [
    "furo>=2024.8.6",
    "sphinx>=8.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "furo>=2024.8.6",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
    "sphinx>=8.2.1",
]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["E501", "D"]
ignore = ["D200", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv]
python-preference = "only-managed"
